--- a/README
+++ b/README
@@ -1,100 +1,287 @@
-All dotfiles are arranged under the directory "home" as they would be in a user's $HOME directory.
+Clone dotfiles to $HOME and symlink the appropriate dotfiles e.g.
+
+    ln -nsf dotfiles/bash_profile .bash_profile
 
 .
-|-- README
-`-- home
-    |-- .bash_aliases
-    |-- .bash_completion
-    |-- .bash_logout
-    |-- .bashrc
-    |-- .git.core.excludesfile
-    |-- .gitconfig
-    |-- .profile
-    |-- .vim
-    |   |-- autoload
-    |   |   |-- delimitMate.vim
-    |   |   `-- rails.vim
-    |   |-- code.vim
-    |   |-- color-dos.vim
-    |   |-- colors
-    |   |   |-- automation.vim
-    |   |   |-- autumnleaf.vim
-    |   |   |-- boreal.vim
-    |   |   |-- delphi.vim
-    |   |   |-- fine_blue.vim
-    |   |   |-- github.vim
-    |   |   |-- habiLight.vim
-    |   |   |-- ir_black.vim
-    |   |   |-- ironman.vim
-    |   |   |-- kate.vim
-    |   |   |-- martin_krischik.vim
-    |   |   |-- monokai.vim
-    |   |   |-- osx_like.vim
-    |   |   |-- pyte.vim
-    |   |   |-- reliable.vim
-    |   |   |-- sienna.vim
-    |   |   |-- softlight.vim
-    |   |   `-- warm_grey.vim
-    |   |-- doc
-    |   |   |-- EnhancedCommentify.txt
-    |   |   |-- NERD_tree.txt
-    |   |   |-- ack.txt
-    |   |   |-- bufexplorer.txt
-    |   |   |-- delimitMate.txt
-    |   |   |-- fugitive.txt
-    |   |   |-- matchit.txt
-    |   |   |-- rails.txt
-    |   |   |-- surround.txt
-    |   |   |-- taglist.txt
-    |   |   |-- tags
-    |   |   |-- vcscommand.txt
-    |   |   `-- winmanager.txt
-    |   |-- filetype.vim
-    |   |-- ftplugin
-    |   |   |-- Wikipedia.vim
-    |   |   |-- mail.vim
-    |   |   |-- ocaml_enhcomm.vim
-    |   |   |-- perl.vim
-    |   |   |-- php_enhcomm.vim
-    |   |   |-- php_make.vim
-    |   |   |-- php_opts.vim
-    |   |   `-- ruby_structure.vim
-    |   |-- mcc.exrc
-    |   |-- nerdtree_plugin
-    |   |   |-- exec_menuitem.vim
-    |   |   `-- fs_menu.vim
-    |   |-- plugin
-    |   |   |-- DirDiff.vim
-    |   |   |-- EnhancedCommentify.vim
-    |   |   |-- NERD_tree.vim
-    |   |   |-- ack.vim
-    |   |   |-- bufexplorer.vim
-    |   |   |-- delimitMate.vim
-    |   |   |-- fugitive.vim
-    |   |   |-- matchit.vim
-    |   |   |-- rails.vim
-    |   |   |-- repeat.vim
-    |   |   |-- surround.vim
-    |   |   |-- taglist.vim
-    |   |   |-- tasklist.vim
-    |   |   |-- unicycle.vim
-    |   |   |-- vcsbzr.vim
-    |   |   |-- vcscommand.vim
-    |   |   |-- vcscvs.vim
-    |   |   |-- vcsgit.vim
-    |   |   |-- vcshg.vim
-    |   |   |-- vcssvk.vim
-    |   |   |-- vcssvn.vim
-    |   |   |-- winfileexplorer.vim
-    |   |   |-- winmanager.vim
-    |   |   `-- wintagexplorer.vim
-    |   |-- syntax
-    |   |   |-- CVSAnnotate.vim
-    |   |   |-- SVKAnnotate.vim
-    |   |   |-- SVNAnnotate.vim
-    |   |   |-- Wikipedia.vim
-    |   |   |-- gitAnnotate.vim
-    |   |   |-- mkd.vim
-    |   |   `-- vcscommit.vim
-    |   `-- text.vim
-    `-- .vimrc
+├── Menlo-ForPowerline.ttc.zip
+├── README
+├── ackrc
+├── bash_aliases
+├── bash_completion
+├── bash_logout
+├── bash_profile
+├── bashrc
+├── git.core.excludesfile
+├── gitconfig
+├── perlcriticrc
+├── vim
+│   ├── autoload
+│   │   └── pathogen.vim
+│   └── bundle
+│       ├── MatchTag
+│       │   ├── README.mkd
+│       │   ├── ftplugin
+│       │   │   ├── html.vim
+│       │   │   └── xml.vim
+│       │   └── test.html
+│       ├── ack-vim
+│       │   ├── README.md
+│       │   ├── Rakefile
+│       │   ├── doc
+│       │   │   ├── ack.txt
+│       │   │   └── tags
+│       │   └── plugin
+│       │       └── ack.vim
+│       ├── bufexplorer
+│       │   ├── doc
+│       │   │   ├── bufexplorer.txt
+│       │   │   └── tags
+│       │   └── plugin
+│       │       └── bufexplorer.vim
+│       ├── delimitMate
+│       │   ├── Makefile
+│       │   ├── README
+│       │   ├── autoload
+│       │   │   ├── delimitMate.vim
+│       │   │   └── delimitMateTests.vim
+│       │   ├── doc
+│       │   │   ├── delimitMate.txt
+│       │   │   └── tags
+│       │   ├── plugin
+│       │   │   └── delimitMate.vim
+│       │   └── test
+│       │       ├── README
+│       │       ├── _setup.vim
+│       │       ├── autoclose_matchpairs.txt
+│       │       ├── autoclose_matchpairs.vim
+│       │       ├── autoclose_quotes.txt
+│       │       ├── autoclose_quotes.vim
+│       │       ├── expand_cr.txt
+│       │       ├── expand_cr.vim
+│       │       ├── expand_space.txt
+│       │       └── expand_space.vim
+│       ├── matchit
+│       │   ├── doc
+│       │   │   ├── matchit.txt
+│       │   │   └── tags
+│       │   └── plugin
+│       │       └── matchit.vim
+│       ├── nerdtree
+│       │   ├── doc
+│       │   │   ├── NERD_tree.txt
+│       │   │   └── tags
+│       │   ├── nerdtree_plugin
+│       │   │   ├── exec_menuitem.vim
+│       │   │   └── fs_menu.vim
+│       │   ├── plugin
+│       │   │   └── NERD_tree.vim
+│       │   └── syntax
+│       │       └── nerdtree.vim
+│       ├── taglist
+│       │   ├── doc
+│       │   │   ├── taglist.txt
+│       │   │   └── tags
+│       │   └── plugin
+│       │       └── taglist.vim
+│       ├── tcomment_vim
+│       │   ├── CHANGES.TXT
+│       │   ├── README
+│       │   ├── autoload
+│       │   │   └── tcomment.vim
+│       │   ├── doc
+│       │   │   └── tcomment.txt
+│       │   ├── plugin
+│       │   │   └── tcomment.vim
+│       │   └── tcomment-addon-info.txt
+│       ├── textile.vim
+│       │   ├── README.textile
+│       │   ├── doc
+│       │   │   └── textile.txt
+│       │   ├── ftdetect
+│       │   │   └── textile.vim
+│       │   ├── ftplugin
+│       │   │   └── textile.vim
+│       │   ├── package.sh
+│       │   └── syntax
+│       │       └── textile.vim
+│       ├── trailertrash.vim
+│       │   ├── README.md
+│       │   └── plugin
+│       │       └── trailertrash.vim
+│       ├── vim-colors-solarized
+│       │   ├── README.mkd
+│       │   ├── autoload
+│       │   │   └── togglebg.vim
+│       │   ├── bitmaps
+│       │   │   └── togglebg.png
+│       │   ├── colors
+│       │   │   └── solarized.vim
+│       │   └── doc
+│       │       ├── solarized.txt
+│       │       └── tags
+│       ├── vim-flavored-markdown
+│       │   ├── README.md
+│       │   ├── ftdetect
+│       │   │   └── ghmarkdown.vim
+│       │   └── syntax
+│       │       └── ghmarkdown.vim
+│       ├── vim-fugitive
+│       │   ├── README.markdown
+│       │   ├── doc
+│       │   │   ├── fugitive.txt
+│       │   │   └── tags
+│       │   └── plugin
+│       │       └── fugitive.vim
+│       ├── vim-git
+│       │   ├── doc
+│       │   │   ├── ft-gitcommit-plugin.txt
+│       │   │   └── tags
+│       │   ├── ftdetect
+│       │   │   └── git.vim
+│       │   ├── ftplugin
+│       │   │   ├── git.vim
+│       │   │   ├── gitcommit.vim
+│       │   │   ├── gitconfig.vim
+│       │   │   ├── gitrebase.vim
+│       │   │   └── gitsendemail.vim
+│       │   ├── indent
+│       │   │   └── gitconfig.vim
+│       │   └── syntax
+│       │       ├── git.vim
+│       │       ├── gitcommit.vim
+│       │       ├── gitconfig.vim
+│       │       ├── gitrebase.vim
+│       │       └── gitsendemail.vim
+│       ├── vim-indent-guides
+│       │   ├── README.markdown
+│       │   ├── autoload
+│       │   │   ├── color_helper.vim
+│       │   │   └── indent_guides.vim
+│       │   ├── doc
+│       │   │   ├── indent_guides.txt
+│       │   │   └── tags
+│       │   ├── plugin
+│       │   │   └── indent_guides.vim
+│       │   └── test-files
+│       │       ├── test-ts2sw2et.txt
+│       │       ├── test-ts2sw2noet.txt
+│       │       ├── test-ts2sw4noet.txt
+│       │       ├── test-ts4sw4et.txt
+│       │       ├── test-ts4sw4noet.txt
+│       │       ├── test-ts8sw2noet.txt
+│       │       ├── test-ts8sw8et.txt
+│       │       └── test-ts8sw8noet.txt
+│       ├── vim-markdown
+│       │   ├── ftdetect
+│       │   │   └── markdown.vim
+│       │   ├── ftplugin
+│       │   │   └── markdown.vim
+│       │   └── syntax
+│       │       └── markdown.vim
+│       ├── vim-perl
+│       │   ├── Changes
+│       │   ├── Makefile
+│       │   ├── README
+│       │   ├── ftdetect
+│       │   │   ├── psgi.vim
+│       │   │   └── tt2.vim
+│       │   ├── ftplugin
+│       │   │   ├── perl.vim
+│       │   │   ├── perl6.vim
+│       │   │   └── xs.vim
+│       │   ├── indent
+│       │   │   ├── perl.vim
+│       │   │   └── perl6.vim
+│       │   ├── syntax
+│       │   │   ├── perl.vim
+│       │   │   ├── perl6.vim
+│       │   │   ├── pod.vim
+│       │   │   ├── tt2.vim
+│       │   │   ├── tt2html.vim
+│       │   │   └── xs.vim
+│       │   ├── t
+│       │   │   ├── 01_highlighting.t
+│       │   │   ├── define_all.vim
+│       │   │   └── vim_syntax.css
+│       │   ├── t_source
+│       │   │   ├── backslashed-indenting.pl
+│       │   │   ├── perl
+│       │   │   │   ├── advanced.t
+│       │   │   │   ├── advanced.t.html
+│       │   │   │   ├── basic.t
+│       │   │   │   ├── basic.t.html
+│       │   │   │   ├── io.t
+│       │   │   │   ├── io.t.html
+│       │   │   │   ├── package.t
+│       │   │   │   └── package.t.html
+│       │   │   └── perl6
+│       │   │       ├── basic.t
+│       │   │       └── basic.t.html
+│       │   └── tools
+│       │       └── efm_perl.pl
+│       ├── vim-perltidy
+│       │   └── ftplugin
+│       │       └── perl.vim
+│       ├── vim-powerline
+│       │   ├── Powerline_default_default_compatible.cache
+│       │   ├── Powerline_default_default_fancy.cache
+│       │   ├── Powerline_default_default_unicode.cache
+│       │   ├── README.rst
+│       │   ├── autoload
+│       │   │   ├── Pl
+│       │   │   │   ├── Colorscheme.vim
+│       │   │   │   ├── Hi.vim
+│       │   │   │   ├── Match.vim
+│       │   │   │   ├── Mod.vim
+│       │   │   │   ├── Parser.vim
+│       │   │   │   ├── Segment.vim
+│       │   │   │   └── Theme.vim
+│       │   │   ├── Pl.vim
+│       │   │   └── Powerline
+│       │   │       ├── Colorschemes
+│       │   │       │   └── default.vim
+│       │   │       ├── Functions
+│       │   │       │   ├── cfi.vim
+│       │   │       │   ├── ft_man.vim
+│       │   │       │   ├── fugitive.vim
+│       │   │       │   └── syntastic.vim
+│       │   │       ├── Functions.vim
+│       │   │       ├── Matches.vim
+│       │   │       ├── Segments
+│       │   │       │   ├── cfi.vim
+│       │   │       │   ├── ctrlp.vim
+│       │   │       │   ├── ft_man.vim
+│       │   │       │   ├── fugitive.vim
+│       │   │       │   ├── rvm.vim
+│       │   │       │   ├── syntastic.vim
+│       │   │       │   └── virtualenv.vim
+│       │   │       ├── Segments.vim
+│       │   │       └── Themes
+│       │   │           └── default.vim
+│       │   ├── doc
+│       │   │   ├── Powerline.txt
+│       │   │   └── tags
+│       │   ├── fontpatcher
+│       │   │   ├── PowerlineSymbols.sfd
+│       │   │   ├── README.rst
+│       │   │   └── fontpatcher
+│       │   └── plugin
+│       │       └── Powerline.vim
+│       ├── vim-repeat
+│       │   ├── README.markdown
+│       │   └── autoload
+│       │       └── repeat.vim
+│       ├── vim-surround
+│       │   ├── README.markdown
+│       │   ├── doc
+│       │   │   ├── surround.txt
+│       │   │   └── tags
+│       │   └── plugin
+│       │       └── surround.vim
+│       └── yankring
+│           ├── doc
+│           │   ├── tags
+│           │   └── yankring.txt
+│           └── plugin
+│               └── yankring.vim
+└── vimrc
